fixes and enhancements